--- a/package.json
+++ b/package.json
@@ -128,5 +128,8 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^7.2.7",
     "vitest": "^4.0.16"
+  },
+  "overrides": {
+    "lodash": "^4.17.23"
   }
 }
